--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My App with Nav Styles and Scripts</h1>
+    <h1>My App with Nav Styles and Scripts and more</h1>
     
 
     <script src="app.js"></script> 
